--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="MiddlewareEngineering7.1-0.0.1-SNAPSHOT">
+    <wb-module deploy-name="TemperatureREST-0.0.1-SNAPSHOT">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="MiddlewareEngineering7.1"/>
-        <property name="java-output-path" value="/MiddlewareEngineering7.1/build/classes"/>
+        <property name="context-root" value="TemperatureREST"/>
+        <property name="java-output-path" value="/TemperatureREST/build/classes"/>
     </wb-module>
 </project-modules>
